--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    
+    <p>Er bestaan verschillende matal bands over de hele wereld. Enkele gekende 'oudere' bands hiervan zijn bijvoorbeeld AC/DC, Metallica, ... </p>
 </body>
 </html>
