--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,21 +10,25 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2>Een muziekband voor en door senioren</h2>
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
+        <dd>Roggeman Fée</dd>
         <dt>Studentnummer</dt>
-        <dd>[STUDENT_NR]</dd>
+        <dd>102348</dd>
         <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dd>1CMO Ba</dd>
     </dl>
     <p>
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
-</body>
+    <img src="images/the-band.jpg" alt="Opdracht nmd" width="500">
+    <p>Het thema dat ik koos voor dit project is ‘een muziekband voor en door senioren’. 
+            Senioren worden gezien als ‘oud en versleten’. Men denkt dat ze enkel nog slapen en bingo spelen. Met dit project wil ik graag dit stereotype doorbereken.  Ik heb daarom gekozen voor een 'seniors' metal band zodat ik kan aantonen dat senioren wel nog actief zijn en genieten van elk moment. 
+              <br>
+    </p>
+<body/>
 </html>
