--- a/pages/intro.html
+++ b/pages/intro.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
+    <img src="images/hands-front.jpg" alt="front" width="1200">
     <h1>New Media Design I</h1>
     <h2>Een muziekband voor en door senioren</h2>
 
@@ -23,7 +24,7 @@
     <p>
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
     </p>
-    
+  
     <h1>Introductie</h1>
     <img src="images/the-band.jpg" alt="Opdracht nmd" width="500">
     <p>Het thema dat ik koos voor dit project is ‘een muziekband voor en door senioren’. 
