--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -20,6 +20,6 @@
     <br> favoriete muziek: Rock
     <br> 
     <br>Scenario 
-    <br> Het ideale scenario voor Hilda zou zijn dat ze op regelmatige basis er even tussenuit kan en zich eens goed kan uitleven op een reock/metal concert. Je zou het niet meteen zeggen als je Hilda ziet maar stilzitten in eenzelfde kamer is helemaal niets voor haar. Het enige probleem voor Hilda is dat ze niet meer met de auto kan rijden. Het zou dus ideaal zijn als er een origineel vervoersmiddel is waarmee zei en vele anderen tot op de locatie van het concert geraken. 
+    <br> Het ideale scenario voor Hilda zou zijn dat ze op regelmatige basis er even tussenuit kan en zich eens goed kan uitleven op een rock/metal concert. Je zou het niet meteen zeggen als je Hilda ziet maar stilzitten in eenzelfde kamer is helemaal niets voor haar. Het enige probleem voor Hilda is dat ze niet meer met de auto kan rijden. Het zou dus ideaal zijn als er een origineel vervoersmiddel is waarmee zei en vele anderen tot op de locatie van het concert geraken. 
 </body>
 </html>
