--- a/pages/intro.html
+++ b/pages/intro.html
@@ -4,63 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eindopdracht NMD-I</title>
+    <title>Introductie - Eindopdracht NMD-I</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
-<div class="wrapper">
-    <nav id="nav">
-        <h3>Discover</h3>
-        <a href="pages/intro.html" target="content" class="link active">Introductie</a>
-        <h3>Define</h3>
-        <a href="pages/concurrentie.html" target="content" class="link">Concurrentie analyse</a>
-        <a href="pages/scenarios.html" target="content" class="link">Scenario's</a>
-        <a href="pages/ideaboard.pdf" target="content" class="link">Ideaboard</a>
-        <h3>Design</h3>
-        <a href="pages/sitemap.pdf" target="content" class="link">Sitemap</a>
-        <a href="pages/wireframes.pdf" target="content" class="link">Wireframes</a>
-        <a href="pages/style-tile.pdf" target="content" class="link">Style Tile</a>
-        <a href="pages/visual-designs.pdf" target="content" class="link">Visual Designs</a>
-        <h3>Develop</h3>
-        <a href="pages/styleguide.html" target="content" class="link">Digital Styleguide</a>
-    </nav>
+    <img src="images/hands-front.jpg" alt="front" width="1200">
+    <h1>New Media Design I</h1>
+    <h2>Een muziekband voor en door senioren</h2>
 
-    <section>
-        <iframe name="content" width="100%" height="100%" src="pages/intro.html" frameborder="0" border="0"></iframe>
-    </section>
-
-    <button id="menu">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </button>
-</div>
-<script>
-    var $nav = document.getElementById("nav");
-    var $button = document.getElementById("menu");
-    $button.addEventListener('click', function () {
-        
-        if ($nav.classList.contains('open')) {
-            $nav.classList.remove('open');
-            this.classList.remove('open');
-        } else {
-            $nav.classList.add('open');
-            this.classList.add('open');
-        }
-    });
-
-    var $links = document.querySelectorAll('a');
-    var $current = document.querySelector('a.active');
-    $links.forEach(function(link) {
-        link.addEventListener('click', function () {
-            $current.classList.remove('active'); 
-            this.classList.add('active');
-            $current = this;
-        });
-    });
-
-</script>
-</body>
+    <dl class="info">
+        <dt>Naam</dt>
+        <dd>Roggeman Fée</dd>
+        <dt>Studentnummer</dt>
+        <dd>102348</dd>
+        <dt>Klasgroep</dt>
+        <dd>1CMO Ba</dd>
+    </dl>
+    <p>
+        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
+    </p>
+  
+    <h1>Introductie</h1>
+    <img src="images/the-band.jpg" alt="Opdracht nmd" width="500">
+    <p>Het thema dat ik koos voor dit project is ‘een muziekband voor en door senioren’. 
+            Senioren worden gezien als ‘oud en versleten’. Men denkt dat ze enkel nog slapen en bingo spelen. Met dit project wil ik graag dit stereotype doorbereken.  Ik heb daarom gekozen voor een 'seniors' metal band zodat ik kan aantonen dat senioren wel nog actief zijn en genieten van elk moment. 
+              <br>
+    </p>
+<body/>
 </html>
