--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -9,17 +9,53 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
-    <h1>Scenario's</h1>
+    <h1>SCENARIO</h1>
     
-    Digitaal profiel
-    <br> Naam: Hilda Van Acker 
-    <br> Leeftijd: 85 jaar 
-    <br> Job: pensioen
-    <br> Woonplaats: Rusthuis de Vliet te Zele 
-    <br> Burgerlijke stand: weduwe 
-    <br> favoriete muziek: Rock
-    <br> 
-    <br>Scenario 
-    <br> Het ideale scenario voor Hilda zou zijn dat ze op regelmatige basis er even tussenuit kan en zich eens goed kan uitleven op een rock/metal concert. Je zou het niet meteen zeggen als je Hilda ziet maar stilzitten in eenzelfde kamer is helemaal niets voor haar. Het enige probleem voor Hilda is dat ze niet meer met de auto kan rijden. Het zou dus ideaal zijn als er een origineel vervoersmiddel is waarmee zei en vele anderen tot op de locatie van het concert geraken. 
+   <h2>Digitaal profiel 1</h2>
+   <ul>
+<img src="images/foto1.jpg" alt="web" width="220">
+<li> Naam: Hilda Van Acker </li>
+<li>Leeftijd: 85 jaar </li>
+<li>Job: pensioen </li>
+<li>Woonplaats: Rusthuis de Vliet te Zele </li>
+   </ul>
+<h3>Scenario</h3>
+ <p>Hilda is 85 jaar en is sinds enkele maanden weduwe geworden. Omdat haar huis te groot werd voor haar alleen besloot ze naar een rusthuis te trekken. Daar woont ze nu in een klein, knus kamertje. De Werknemers en ook de bewoners van het rusthuis doen er alles aan om zo veel mogelijk activiteiten te organiseren, … Als ontspanning in haar drukke leven ging Hilda vaak met enkele vrienden naar rock concerten. Ook nu kan ze daar nog enorm van genieten. De kleinkinderen van Hilda leerden haar werken met een computer zo leerde ze surfen naar haar favorite websites en leerde ze zelf online tickets,… bestellen. 
+</p>
+<p>Het perfecte scenario voor Hilda zou zijn, een mooie overzichtelijke website waar ze makkelijk tickets kan bestellen. Ook een vervoersmogelijkheid zou goed van pas komen aangezien ze niet meer met de auto kan rijden. Een bus bijvoorbeeld die vertrekt vanuit het rusthuis, haar naar de locatie van het concert brengt en terug zou zeer handig zijn. 
+</p>
+<br>
+
+<h2>Digitaal profiel 2</h2>
+<ul> 
+    <img src="images/foto2.jpg" alt="web" width="220">
+    <li>Naam:  Marie-Jeanne</li>
+    <li>Leeftijd: 65 jaar</li>
+    <li>Woonplaats: Op het landelijke</li>
+</ul>
+<p>Marie-Jeanne is een gehuwde vrouw die haar hele leven al op ‘den boeren buiten’ woont. Ze is boerin en heeft heel weinig ervaring met grote steden. Enkel voor concerten, afspraken met vrienden kwam ze naar de stad. Ook het openbaar vervoer is haar volledig onbekend aangezien ze dit niet vaak ziet in haar omgeving. Maar verder heeft Marie-Jeanne alle luxe die ze nodig heeft televisie, telefoon, GSM, … Ze doet graag alles op de ouderwetse manier. </p>
+<p>Het ideale scenario voor Marie-Jeanne zou zijn, een tv-spot waardoor ze meer informatie te weten komt in verband met het concert. Telefonisch tickets reserveren en op de avond van het concert deze aan de kassa betalen zou ideaal zijn aangezien Marie-Jeanne helemaal niets afweet van internet bankieren.</p>   
+<br>
+<h2>Digitaal profiel 3</h2>
+<ul>
+<img src="images/foto3.jpg" alt="web" width="220">
+<li>Naam:  Marcel </li>
+<li>Leeftijd: 60 jaar</li>
+<li>Woonplaats: in een klein appartement in de stad</li>
+</ul>
+<p>Marcel is een alleenstaande man die in een serviceflat woont aan de rand van de stad. Hij woont al lang alleen en kan zeer goed voor zichzelf zorgen. Maar alle hulp is welkom aangezien Marcel sinds kort een been verloor door ziekte. Hij zit in een rolstoel en is dus niet meer zo mobiel. Marcel hield vroeger enorm veel van rockmuziek. Concerten waren dus ook een van zijn favoriete bezigheid. Marcel is zeker mee van zijn tijd en spendeert veel tijd online. </p>
+<p>Het ideale scenario voor Marcel zou zijn dat een eenvoudige, duidelijke website bestaat waarin alle concerten, evenementen opgelijst staan. Zodat hij eenvoudig kan kiezen welk concert hij wil bijwonen en online tickets kan bestellen. Het concert moet toegankelijk zijn voor gehandicapten. Ook vervoersmogelijkheid heen en terug voor gehandicapten is een absolute must. 
+    </p>
+<br>
+<h2>Digitaal profiel 4</h2>
+<ul>
+        <img src="images/foto4.jpg" alt="web" width="220">
+    <li>Naam: Jean-Pierre </li>
+    <li>Leeftijd: 70 jaar </li>
+    <li>Woonplaats: Een woonboot</li>
+</ul>
+<p>Jean-Pierre is gehuwd en woont samen met zijn vrouw op een woonboot. Hij is al zijn hele leven schipper. Zijn favoriete muziek is rock, hij heeft dus ook al veel concerten bijgewoond. Nu is hij op pensioen en wil hij extra genieten van het leven hij is nog zeer mobiel en in goeie gezondheid. </p>
+<p>Het ideale scenario voor Jean-Pierre zou zijn dat hij online in het internet café aan de haven een duidelijk overzicht vindt van de komende concerten en dat hij op die manier zijn tickets kan reserveren. Hij heeft een auto maar geen gps een duidelijke routebeschrijving zou dus goed van pas komen. 
+    </p>
 </body>
 </html>
